cleaning strategy files